resources/demo-deployment/spaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: ninjaspace
  name: ninjaspace
