resources/demo-deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    #kubernetes.io/ingress.class: nginx-internal
    #kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /carrot
          pathType: Prefix
          backend:
            service:
              name: carrot-service
              port:
                number: 5678
        - path: /avocado
          pathType: Prefix
          backend:
            service:
              name: avocado-service
              port:
                number: 5678
  # host: aks-ninja-blue.per.no
